<resources>
    <string name="app_name">JuegoCaballos</string>

    <string name="banner_superior">Soy un banner superior</string>
    <string name="banner_inferior">Soy un banner inferior</string>

    <string name="titulo_aplicacion">Juega al ajedrez</string>

    <string name="nivel">Nivel</string>

    <string name="movimientosTitulo">Moves</string>
    <string name="tiempoTitulo">Tiempo</string>
    <string name="vidasTitulo">Vidas</string>
    <string name="opcionesTitulo">Opciones</string>
    <string name="Instrucciones">Muevel el caballito</string>
    <string name="finDeJuego">finDeJuego</string>


</resources>