<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlScreen"

    android:background="@color/fondo_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- El banner superior-->
    <LinearLayout
        android:id="@+id/llBannerSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvBannerSuperior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/white"
            android:background="@color/constrast_data"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:text="@string/banner_superior">

        </TextView>
    </LinearLayout>


    <!-- El cuerpo del juegor-->
    <!-- que vaya justo debajo del banner superior -->
    <!-- que deje un hueco abajo para el banner inferior -->
    <ScrollView
        android:id="@+id/svJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBannerSuperior"
        android:paddingBottom="70dp">

        <!--los elementos del juego -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <!--El título del juego-->
            <!-- para el tamaño de fuente usamos sp-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/titulo_aplicacion"
                android:textSize="40sp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/constrast_data"
                android:background="@color/texto_blanco"
                android:textAlignment="center"
                android:layout_marginTop="20dp">

            </TextView>


            <!--El nivel del jugador del juego-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/nivel"
                android:textSize="20sp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/texto_blanco"
                android:background="@drawable/bg_title_top"
                android:textAlignment="center"
                android:layout_marginTop="20dp">
            </TextView>
            <!--El borde inferior del nivel del jugador del juego-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textSize="20sp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/texto_blanco"
                android:background="@drawable/bg_title_bottom"
                android:textAlignment="center"
                android:layout_marginBottom="20dp">
            </TextView>

            <!--Paleta de información-->
            <!--Contendrá cuatro botones asi que para que sea resposivo weight4-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:weightSum="4">

                <!--Paleta de información campo movimientos-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <!-- texto de movimientos-->
                    <TextView
                        android:id="@+id/movimientosTitulo"
                        android:text="@string/movimientosTitulo"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_top"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <!-- numero de movimientos restantes de movimientos-->
                    <TextView
                        android:id="@+id/movimientosDatos"
                        android:text="0"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_bottom"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <!--Paleta de información campo Tiempo-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <!-- texto de movimientos-->
                    <TextView
                        android:id="@+id/tiempoTitulo"
                        android:text="@string/tiempoTitulo"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_top"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <!-- numero de movimientos restantes de movimientos-->
                    <TextView
                        android:id="@+id/tiempoDatos"
                        android:text="0"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_bottom"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <!--Paleta de información campo Vidas-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <!-- texto de movimientos-->
                    <TextView
                        android:id="@+id/vidasTitulo"
                        android:text="@string/vidasTitulo"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_top"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <!-- numero de movimientos restantes de movimientos-->
                    <TextView
                        android:id="@+id/vidasDato"
                        android:text="0"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_bottom"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>



                <!--Paleta de información campo opciones-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <!-- texto de movimientos-->
                    <TextView
                        android:id="@+id/opcionesTitulo"
                        android:text="@string/opcionesTitulo"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_top"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <!-- numero de movimientos restantes de movimientos-->
                    <TextView
                        android:id="@+id/opcionesDato"
                        android:text="0"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:background="@drawable/bg_item_bottom"
                        android:textColor="@color/texto_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </ScrollView>












    <!-- El banner inferior-->
    <LinearLayout
        android:id="@+id/llBannerInferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"        >

        <TextView
            android:id="@+id/tvBannerInferior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/white"
            android:background="@color/constrast_data"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            tools:text="@string/banner_inferior">

        </TextView>
    </LinearLayout>


</RelativeLayout>